@@ -39,13 +39,16 @@
 
 package org.netbeans.modules.parsing.spi.indexing.support;
 
+import java.io.File;
 import java.net.MalformedURLException;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import org.netbeans.modules.parsing.impl.indexing.IndexDocumentImpl;
 import org.openide.filesystems.FileObject;
 import org.openide.filesystems.URLMapper;
+import org.openide.util.Exceptions;
 import org.openide.util.Parameters;
 
 /**
@@ -83,7 +86,15 @@ public final class IndexResult {
         if (cachedUrl == null) {
             URL url = null;
             try {
-                url = new URL(root, spi.getSourceName());
+                String protocol = root.getProtocol();
+                if ("file".equals(protocol)) {//NOI18N
+                    File rootFile = new File(root.toURI());
+                    url = new File(rootFile, spi.getSourceName()).toURI().toURL();
+                } else {
+                     url = new URL(root, spi.getSourceName());
+                }
+            } catch (URISyntaxException ex) {
+                LOG.log(Level.WARNING, null, ex);
             } catch (MalformedURLException ex) {
                 LOG.log(Level.WARNING, null, ex);
             }
